[project]
name = "pydew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bombercorny", email = "66563294+bombercorny@users.noreply.github.com" }
]
requires-python = ">=3.11.0"
dependencies = [
    "pygame-ce>=2.5.5",
]

[project.scripts]
pydew = "pydew:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
